Issue 973: Craig Tar API Endpoint (#976)
* feat: craig tar endpoint

* feat: changelog

* feat: api spec

* comment

* remove extra spy
